k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-service
  ports:
    - name: rpc
      port: 9090
      targetPort: rpc
    - name: http
      port: 9091
      targetPort: http
