k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-server-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/protocol: http
    traefik.ingress.kubernetes.io/content-type-nosniff: "true"
    traefik.ingress.kubernetes.io/browser-xss-filter: "true"
    traefik.ingress.kubernetes.io/content-security-policy: default-src 'self' *.fairbank.io
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/pass-client-tls-cert: |
      pem: true
spec:
  tls:
    - secretName: cert-fairbank-io
  rules:
    - host: echo.fairbank.io
      http:
        paths:
          - path: /echo
            backend:
              serviceName: echo-server
              servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-server-rpc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/protocol: h2c
    traefik.ingress.kubernetes.io/frontend-entry-points: http
spec:
  rules:
    - host: echo.fairbank.io
      http:
        paths:
          - backend:
              serviceName: echo-server
              servicePort: rpc
